-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    3.0.0

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2004 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 3.0.0
-------------------

7/8/05
    - Updated loadcase.m, savecase.m, idx_bus.m, idx_gen.m, caseformat.m
      and tests for version 2 case file format, which includes piece-wise
      linear generator capability curves, generator ramp rates and branch
      angle difference limits.
    

Changes since 3.0b4
-------------------

2/14/05
    - Released version 3.0.0.

2/3/05
    - In mp_lp.m and mp_qp.m, on Windows it now makes sure BPMPD_MEX is not
      called in verbose mode which causes a Matlab crash.


Changes since 3.0b3
-------------------

1/28/05
    - Released version 3.0b4.

1/27/05
    - Added case6ww.m and case4gs.m.
    - Minor modifications to printpf.m to handle larger bus numbers.

1/26/05
    - Minor changes to uopf.m to make sure it plays nicely with dispatchable
      loads.

1/25/05
    - Major updates to user manual.

1/24/05
    - Switched to using the new isload() to check for dispatchable load.
    - For dispatchable loads, switched from using PG and QG to PMIN and either
      QMIN (for inductive loads) or QMAX (for capacitive loads) to define the
      constant power factor constraint. This prevents the power factor
      information from being lost when it is dispatched to zero. If the initial
      values of PG and QG are not consistent with the ratio defined by PMIN
      and the appropriate Q limit it gives an error. This is to prevent a user
      from unknowingly using a case file which would have defined a different
      power factor constraint under previous versions of MATPOWER.
      If both QMIN and QMAX are zero, it no longer includes the redundant
      unity power factor constraint.

1/20/05