@@ -406,7 +406,9 @@ if isOPF
     %% voltage constraints
     if OUT_V_LIM == 2 | (OUT_V_LIM == 1 & ...
                          (any(bus(:, VM) < bus(:, VMIN) + ctol) | ...
-                          any(bus(:, VM) > bus(:, VMAX) - ctol)))
+                          any(bus(:, VM) > bus(:, VMAX) - ctol) | ...
+                          any(bus(:, MU_VMIN) > 1e-6) | ...
+                          any(bus(:, MU_VMAX) > 1e-6)))
         fprintf(fd, '\n================================================================================');
         fprintf(fd, '\n|     Voltage Constraints                                                      |');
         fprintf(fd, '\n================================================================================');
@@ -415,15 +417,16 @@ if isOPF
         for i = 1:nb
             if OUT_V_LIM == 2 | (OUT_V_LIM == 1 & ...
                          (bus(i, VM) < bus(i, VMIN) + ctol | ...
-                          bus(i, VM) > bus(i, VMAX) - ctol))
+                          bus(i, VM) > bus(i, VMAX) - ctol | ...
+                          bus(i, MU_VMIN) > 1e-6 | bus(i, MU_VMAX) > 1e-6))
                 fprintf(fd, '\n%5d', bus(i, BUS_I));
-                if bus(i, VM) < bus(i, VMIN) + ctol
+                if bus(i, VM) < bus(i, VMIN) + ctol | bus(i, MU_VMIN) > 1e-6
                     fprintf(fd, '%10.3f', bus(i, MU_VMIN));                    
                 else
                     fprintf(fd, '      -   ');
                 end
                 fprintf(fd, '%8.3f%7.3f%7.3f', bus(i, [VMIN, VM, VMAX]));
-                if bus(i, VM) > bus(i, VMAX) - ctol
+                if bus(i, VM) > bus(i, VMAX) - ctol | bus(i, MU_VMAX) > 1e-6
                     fprintf(fd, '%10.3f', bus(i, MU_VMAX));
                 else
                     fprintf(fd, '      -    ');
@@ -436,16 +439,22 @@ if isOPF
     %% generator P constraints
     if OUT_PG_LIM == 2 | OUT_QG_LIM == 2 | ...
             (OUT_PG_LIM == 1 & (any(gen(ong, PG) < gen(ong, PMIN) + ctol) | ...
-                                any(gen(ong, PG) > gen(ong, PMAX) - ctol))) | ...
+                                any(gen(ong, PG) > gen(ong, PMAX) - ctol) | ...
+                                any(gen(ong, MU_PMIN) > 1e-6) | ...
+                                any(gen(ong, MU_PMAX) > 1e-6))) | ...
             (OUT_QG_LIM == 1 & (any(gen(ong, QG) < gen(ong, QMIN) + ctol) | ...
-                                any(gen(ong, QG) > gen(ong, QMAX) - ctol)))
+                                any(gen(ong, QG) > gen(ong, QMAX) - ctol) | ...
+                                any(gen(ong, MU_QMIN) > 1e-6) | ...
+                                any(gen(ong, MU_QMAX) > 1e-6)))
         fprintf(fd, '\n================================================================================');
         fprintf(fd, '\n|     Generation Constraints                                                   |');
         fprintf(fd, '\n================================================================================');
     end
     if OUT_PG_LIM == 2 | (OUT_PG_LIM == 1 & ...
                              (any(gen(ong, PG) < gen(ong, PMIN) + ctol) | ...
-                              any(gen(ong, PG) > gen(ong, PMAX) - ctol)))
+                              any(gen(ong, PG) > gen(ong, PMAX) - ctol) | ...
+                              any(gen(ong, MU_PMIN) > 1e-6) | ...
+                              any(gen(ong, MU_PMAX) > 1e-6)))
         fprintf(fd, '\n Gen   Bus                Active Power Limits');
         fprintf(fd, '\n  #     #    Pmin mu    Pmin       Pg       Pmax    Pmax mu');
         fprintf(fd, '\n----  -----  -------  --------  --------  --------  -------');
@@ -453,9 +462,10 @@ if isOPF
             i = ong(k);
             if OUT_PG_LIM == 2 | (OUT_PG_LIM == 1 & ...
                         (gen(i, PG) < gen(i, PMIN) + ctol | ...
-                         gen(i, PG) > gen(i, PMAX) - ctol))
+                         gen(i, PG) > gen(i, PMAX) - ctol | ...
+                         gen(i, MU_PMIN) > 1e-6 | gen(i, MU_PMAX) > 1e-6))
                 fprintf(fd, '\n%4d%6d ', i, gen(i, GEN_BUS));
-                if gen(i, PG) < gen(i, PMIN) + ctol
+                if gen(i, PG) < gen(i, PMIN) + ctol | gen(i, MU_PMIN) > 1e-6
                     fprintf(fd, '%8.3f', gen(i, MU_PMIN));
                 else
                     fprintf(fd, '     -  ');
@@ -465,7 +475,7 @@ if isOPF
                 else
                     fprintf(fd, '%10.2f       -  %10.2f', gen(i, [PMIN, PMAX]));
                 end
-                if gen(i, PG) > gen(i, PMAX) - ctol
+                if gen(i, PG) > gen(i, PMAX) - ctol | gen(i, MU_PMAX) > 1e-6
                     fprintf(fd, '%9.3f', gen(i, MU_PMAX));
                 else
                     fprintf(fd, '      -  ');
@@ -478,7 +488,9 @@ if isOPF
     %% generator Q constraints
     if OUT_QG_LIM == 2 | (OUT_QG_LIM == 1 & ...
                              (any(gen(ong, QG) < gen(ong, QMIN) + ctol) | ...
-                              any(gen(ong, QG) > gen(ong, QMAX) - ctol)))
+                              any(gen(ong, QG) > gen(ong, QMAX) - ctol) | ...
+                              any(gen(ong, MU_QMIN) > 1e-6) | ...
+                              any(gen(ong, MU_QMAX) > 1e-6)))
         fprintf(fd, '\nGen  Bus              Reactive Power Limits');
         fprintf(fd, '\n #    #   Qmin mu    Qmin       Qg       Qmax    Qmax mu');
         fprintf(fd, '\n---  ---  -------  --------  --------  --------  -------');
@@ -486,9 +498,10 @@ if isOPF
             i = ong(k);
             if OUT_QG_LIM == 2 | (OUT_QG_LIM == 1 & ...
                         (gen(i, QG) < gen(i, QMIN) + ctol | ...
-                         gen(i, QG) > gen(i, QMAX) - ctol))
+                         gen(i, QG) > gen(i, QMAX) - ctol | ...
+                         gen(i, MU_QMIN) > 1e-6 | gen(i, MU_QMAX) > 1e-6))
                 fprintf(fd, '\n%3d%5d', i, gen(i, GEN_BUS));
-                if gen(i, QG) < gen(i, QMIN) + ctol
+                if gen(i, QG) < gen(i, QMIN) + ctol | gen(i, MU_QMIN) > 1e-6
                     fprintf(fd, '%8.3f', gen(i, MU_QMIN));
                 else
                     fprintf(fd, '     -  ');
@@ -498,7 +511,7 @@ if isOPF
                 else
                     fprintf(fd, '%10.2f       -  %10.2f', gen(i, [QMIN, QMAX]));
                 end
-                if gen(i, QG) > gen(i, QMAX) - ctol
+                if gen(i, QG) > gen(i, QMAX) - ctol | gen(i, MU_QMAX) > 1e-6
                     fprintf(fd, '%9.3f', gen(i, MU_QMAX));
                 else
                     fprintf(fd, '      -  ');
@@ -511,16 +524,22 @@ if isOPF
     %% dispatchable load P constraints
     if OUT_PG_LIM == 2 | OUT_QG_LIM == 2 | ...
             (OUT_PG_LIM == 1 & (any(gen(onld, PG) < gen(onld, PMIN) + ctol) | ...
-                                any(gen(onld, PG) > gen(onld, PMAX) - ctol))) | ...
+                                any(gen(onld, PG) > gen(onld, PMAX) - ctol) | ...
+                                any(gen(onld, MU_PMIN) > 1e-6) | ...
+                                any(gen(onld, MU_PMAX) > 1e-6))) | ...
             (OUT_QG_LIM == 1 & (any(gen(onld, QG) < gen(onld, QMIN) + ctol) | ...
-                                any(gen(onld, QG) > gen(onld, QMAX) - ctol)))
+                                any(gen(onld, QG) > gen(onld, QMAX) - ctol) | ...
+                                any(gen(onld, MU_QMIN) > 1e-6) | ...
+                                any(gen(onld, MU_QMAX) > 1e-6)))
         fprintf(fd, '\n================================================================================');
         fprintf(fd, '\n|     Dispatchable Load Constraints                                            |');
         fprintf(fd, '\n================================================================================');
     end
     if OUT_PG_LIM == 2 | (OUT_PG_LIM == 1 & ...
                              (any(gen(onld, PG) < gen(onld, PMIN) + ctol) | ...
-                              any(gen(onld, PG) > gen(onld, PMAX) - ctol)))
+                              any(gen(onld, PG) > gen(onld, PMAX) - ctol) | ...
+                              any(gen(onld, MU_PMIN) > 1e-6) | ...
+                              any(gen(onld, MU_PMAX) > 1e-6)))
         fprintf(fd, '\nGen  Bus               Active Power Limits');
         fprintf(fd, '\n #    #   Pmin mu    Pmin       Pg       Pmax    Pmax mu');
         fprintf(fd, '\n---  ---  -------  --------  --------  --------  -------');
@@ -528,9 +547,10 @@ if isOPF
             i = onld(k);
             if OUT_PG_LIM == 2 | (OUT_PG_LIM == 1 & ...
                         (gen(i, PG) < gen(i, PMIN) + ctol | ...
-                         gen(i, PG) > gen(i, PMAX) - ctol))
+                         gen(i, PG) > gen(i, PMAX) - ctol | ...
+                         gen(i, MU_PMIN) > 1e-6 | gen(i, MU_PMAX) > 1e-6))
                 fprintf(fd, '\n%3d%5d', i, gen(i, GEN_BUS));
-                if gen(i, PG) < gen(i, PMIN) + ctol
+                if gen(i, PG) < gen(i, PMIN) + ctol | gen(i, MU_PMIN) > 1e-6
                     fprintf(fd, '%8.3f', gen(i, MU_PMIN));
                 else
                     fprintf(fd, '     -  ');
@@ -540,7 +560,7 @@ if isOPF
                 else
                     fprintf(fd, '%10.2f       -  %10.2f', gen(i, [PMIN, PMAX]));
                 end
-                if gen(i, PG) > gen(i, PMAX) - ctol
+                if gen(i, PG) > gen(i, PMAX) - ctol | gen(i, MU_PMAX) > 1e-6
                     fprintf(fd, '%9.3f', gen(i, MU_PMAX));
                 else
                     fprintf(fd, '      -  ');
@@ -553,7 +573,9 @@ if isOPF
     %% dispatchable load Q constraints
     if OUT_QG_LIM == 2 | (OUT_QG_LIM == 1 & ...
                              (any(gen(onld, QG) < gen(onld, QMIN) + ctol) | ...
-                              any(gen(onld, QG) > gen(onld, QMAX) - ctol)))
+                              any(gen(onld, QG) > gen(onld, QMAX) - ctol) | ...
+                              any(gen(onld, MU_QMIN) > 1e-6) | ...
+                              any(gen(onld, MU_QMAX) > 1e-6)))
         fprintf(fd, '\nGen  Bus              Reactive Power Limits');
         fprintf(fd, '\n #    #   Qmin mu    Qmin       Qg       Qmax    Qmax mu');
         fprintf(fd, '\n---  ---  -------  --------  --------  --------  -------');
@@ -561,9 +583,10 @@ if isOPF
             i = onld(k);
             if OUT_QG_LIM == 2 | (OUT_QG_LIM == 1 & ...
                         (gen(i, QG) < gen(i, QMIN) + ctol | ...
-                         gen(i, QG) > gen(i, QMAX) - ctol))
+                         gen(i, QG) > gen(i, QMAX) - ctol | ...
+                         gen(i, MU_QMIN) > 1e-6 | gen(i, MU_QMAX) > 1e-6))
                 fprintf(fd, '\n%3d%5d', i, gen(i, GEN_BUS));
-                if gen(i, QG) < gen(i, QMIN) + ctol
+                if gen(i, QG) < gen(i, QMIN) + ctol | gen(i, MU_QMIN) > 1e-6
                     fprintf(fd, '%8.3f', gen(i, MU_QMIN));
                 else
                     fprintf(fd, '     -  ');
@@ -573,7 +596,7 @@ if isOPF
                 else
                     fprintf(fd, '%10.2f       -  %10.2f', gen(i, [QMIN, QMAX]));
                 end
-                if gen(i, QG) > gen(i, QMAX) - ctol
+                if gen(i, QG) > gen(i, QMAX) - ctol | gen(i, MU_QMAX) > 1e-6
                     fprintf(fd, '%9.3f', gen(i, MU_QMAX));
                 else
                     fprintf(fd, '      -  ');
@@ -595,7 +618,9 @@ if isOPF
     end
     if OUT_LINE_LIM == 2 | (OUT_LINE_LIM == 1 & ...
                         (any(abs(Sf) > branch(:, RATE_A) - ctol) | ...
-                         any(abs(St) > branch(:, RATE_A) - ctol)))
+                         any(abs(St) > branch(:, RATE_A) - ctol) | ...
+                         any(branch(:, MU_SF) > 1e-6) | ...
+                         any(branch(:, MU_ST) > 1e-6)))
         fprintf(fd, '\n================================================================================');
         fprintf(fd, '\n|     Branch Flow Constraints                                                  |');
         fprintf(fd, '\n================================================================================');
@@ -605,16 +630,17 @@ if isOPF
         for i = 1:nl
             if OUT_LINE_LIM == 2 | (OUT_LINE_LIM == 1 & ...
                          (Sf(i) > branch(i, RATE_A) - ctol | ...
-                          St(i) > branch(i, RATE_A) - ctol))
+                          St(i) > branch(i, RATE_A) - ctol | ...
+                          branch(i, MU_SF) > 1e-6 | branch(i, MU_ST) > 1e-6))
                 fprintf(fd, '\n%4d%7d', i, branch(i, F_BUS));
-                if Sf(i) > branch(i, RATE_A) - ctol
+                if Sf(i) > branch(i, RATE_A) - ctol | branch(i, MU_SF) > 1e-6
                     fprintf(fd, '%10.3f', branch(i, MU_SF));
                 else
                     fprintf(fd, '      -   ');
                 end
                 fprintf(fd, '%9.2f%10.2f%10.2f', ...
                     [Sf(i), branch(i, RATE_A), St(i)]);
-                if St(i) > branch(i, RATE_A) - ctol
+                if St(i) > branch(i, RATE_A) - ctol | branch(i, MU_ST) > 1e-6
                     fprintf(fd, '%10.3f', branch(i, MU_ST));
                 else
                     fprintf(fd, '      -   ');
